--- a/.github/workflows/deploy_to_gh-pages.yml
+++ b/.github/workflows/deploy_to_gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
           mdbook-version: 'latest'
 
       - run: git submodule update --init --recursive
-      - run: mdbook build
+      - run: npm run build && mdbook build
 
       - name: Deploy
         uses: iotaledger/actions-gh-pages@v3
