--- a/.github/workflows/deploy_to_gh-pages.yml
+++ b/.github/workflows/deploy_to_gh-pages.yml
@@ -16,10 +16,12 @@ jobs:
         with:
           mdbook-version: 'latest'
 
-      - run: npm i
-      - run: npm run build
       - run: git submodule update --init --recursive
       - run: mdbook build
+
+      - run: npm i
+      - run: npm run build
+      - run: cp -r public/* book/public
 
       - name: Deploy
         uses: iotaledger/actions-gh-pages@v3
@@ -27,3 +29,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./book
+          cname: docs.einfachiota.de
