--- a/book.toml
+++ b/book.toml
@@ -4,7 +4,7 @@ language = "en"
 multilingual = false
 src = ""
 title = "IOTA Documentation"
-
+theme= "./theme"
 
 [preprocessor.open-on-gh]
 command = "mdbook-open-on-gh"
